[package]
name = "backupsync"
version = "0.1.0"
edition = "2021"
description = "A fast and efficient multi-threaded backup tool written in Rust, supporting compression, incremental backup, and automation."
license = "MIT"
authors = ["Lakshya Jain lakshyajain0740@gmail.com"]

[dependencies]
dirs = "6.0.0"
flate2 = "1.0.35"
indicatif = "0.17.11"
tar = "0.4.43"
toml = "0.8.20"
walkdir = "2.4"
zip = "2.2.2"

